fixed spacing between inputs & labels

--- a/aware-app/src/landing/Landing.css
+++ b/aware-app/src/landing/Landing.css
@@ -25,4 +25,5 @@ button {
     border: none;
     width: 100%;
     border-radius: 7px;
+    margin-top: 15px;
 }
